--- a/technopost/home/templates/home/home.html
+++ b/technopost/home/templates/home/home.html
@@ -2,6 +2,7 @@
 {% block content %}
     {% for data in datas %}
             <article class="media content-section">
+                    <img src= "{{ post.author.profile.image.url }}" class="rounded-circle article-img">
                     <div class="media-body">
                       <div class="article-metadata">
                         <a class="mr-2" href="#">{{ data.author }}</a>
